<resources>
    <string name="app_name">HuiYuanDict</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_debug">单词树Debug</string>
    <string name="app_share_description">收录了大学英语四，六级，专四，专八，托福，托业,GRE，高中，初中等多种词汇！单词内容含单词翻译，单词变形，例句，同义词，反义词，英英解释，常用短语，详细释义等。</string>
    <string name="app_share_link_tencent">http://a.app.qq.com/o/simple.jsp?pkgname=com.ou.wordtree</string>
    <string name="app_share_msg_canceled">分享取消</string>
    <string name="app_share_msg_failed">分享失败</string>
    <string name="app_share_msg_succeed">分享成功</string>
    <string name="app_share_title">单词树--英文单词学习利器！</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="books_btn_title_buygolds">购买金币</string>
    <string name="books_btn_title_delete">删除</string>
    <string name="books_btn_title_downloaded">已下载</string>
    <string name="books_btn_title_edit">编辑</string>
    <string name="books_btn_title_reject_buy">就不买</string>
    <string name="books_btn_title_to_download">点击下载</string>
    <string name="books_msg_change_book">切换词汇到： %s</string>
    <string name="books_msg_download_failed">下载失败,请稍后再试！</string>
    <string name="books_msg_download_start_sound">发音下载中..</string>
    <string name="books_msg_download_start_word">词汇下载中..</string>
    <string name="books_msg_download_succeed">下载成功！</string>
    <string name="books_msg_golds_costed">用去金币%1$d个， 剩余金币%2$d个。</string>
    <string name="books_msg_golds_needs">需要金币%1$d个， 剩余金币%2$d个。</string>
    <string name="books_msg_golds_shotage">金币不足</string>
    <string name="books_msg_need_disk_space">磁盘空间不足！</string>
    <string name="books_msg_updated_book_sound">更新:%s 声音成功！</string>
    <string name="books_msg_updated_book_txt">更新:%s 词汇成功！</string>
    <string name="books_tab_title_allbooks">所有词汇</string>
    <string name="books_tab_title_mybooks">我的词汇</string>
    <string name="books_txt_info_counts">%1$d个单元，共%2$d个单词</string>
    <string name="books_txt_info_downloads">下载%d次</string>
    <string name="books_txt_info_golds">金币:%d个</string>
    <string name="books_txt_info_size">单词:%1$s 发音:%2$s</string>
    <string name="books_txt_selected">选中</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="buy_button">購入する</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_license_message">アプリケーションを起動しています。</string>
    <string name="confirm_btn_no">不要</string>
    <string name="confirm_btn_ok">好的</string>
    <string name="confirm_btn_title">确认</string>
    <string name="confirm_btn_yes">是的</string>
    <string name="data_loading_more">加载更多..</string>
    <string name="data_no_more_datas">没有更多数据</string>
    <string name="data_refresh_loading">加载中..</string>
    <string name="data_refresh_pull">下拉刷新</string>
    <string name="data_refresh_release">释放更新</string>
    <string name="gain_gold_for_install">初次安装成功，获得[%1$d]个金币!</string>
    <string name="gain_gold_for_share_app">感谢您分享应用，已获得[%1$d]个金币!</string>
    <string name="hello_world">Hello world!</string>
    <string name="help_caption_card_btn_show_detail">点击单词，查看详细释义</string>
    <string name="help_caption_detail_btn_contrast">录音播放</string>
    <string name="help_caption_detail_btn_favorite">左右滑动星星可以收藏单词</string>
    <string name="help_caption_detail_btn_info">可设置自动发音，循环滚动</string>
    <string name="help_caption_detail_btn_record">录音</string>
    <string name="help_caption_home_btn_menu">设置菜单</string>
    <string name="help_caption_home_btn_more">下载更多词汇</string>
    <string name="learn_detail_btn_reclaim">纠错</string>
    <string name="learn_detail_info_txt_autopron">自动发音</string>
    <string name="learn_detail_info_txt_interval">滚动间隔</string>
    <string name="learn_detail_info_txt_repeat">循环</string>
    <string name="learn_detail_info_txt_second">%d秒</string>
    <string name="learn_detail_msg_audio_permission">请先在手机【设置】中开启[录音]权限！</string>
    <string name="learn_detail_reclaim_txt_info">"如果发现此单词(翻译，例句，发音等)有错误，请向我们发送报告。
经确认之后，我们会及时更新数据库！"</string>
    <string name="learn_detail_txt_asynwords">【反义词】</string>
    <string name="learn_detail_txt_discriminate">【详细说明】</string>
    <string name="learn_detail_txt_en2en">【英英释义】</string>
    <string name="learn_detail_txt_example">【例句】</string>
    <string name="learn_detail_txt_info_correct">正确:</string>
    <string name="learn_detail_txt_info_wrong">不正确:</string>
    <string name="learn_detail_txt_memo">笔记</string>
    <string name="learn_detail_txt_synwords">【同义词】</string>
    <string name="learn_detail_txt_usedphrase">【常用短语】</string>
    <string name="learn_detail_txt_wordchang">【单词变形】</string>
    <string name="list_tab_title_abc">abc</string>
    <string name="list_tab_title_favorite">收藏夹</string>
    <string name="list_tab_title_mistake">常错单词</string>
    <string name="list_tab_title_part">parts</string>
    <string name="list_tab_title_still">未测验</string>
    <string name="login_btn_save">保存</string>
    <string name="login_chk_username_existed">%s 已经存在，请重新指定！</string>
    <string name="login_chk_username_not_match">用户名只能包含中文、中英文字母、数字和下划线!</string>
    <string name="login_chk_username_null">用户名不能为空！</string>
    <string name="login_chk_username_too_long">用户名称太长了!</string>
    <string name="login_chk_username_too_short">用户名太短了!</string>
    <string name="login_msg_canceled">登录取消！</string>
    <string name="login_msg_failed">登录失败！</string>
    <string name="login_msg_succeed">登录成功！</string>
    <string name="login_msg_waiting">请稍等..</string>
    <string name="login_no_qq">未安装QQ</string>
    <string name="login_no_weibo">未安装新浪微博</string>
    <string name="login_no_weixin">未安装微信</string>
    <string name="login_sns_qq">QQ</string>
    <string name="login_sns_weibo">新浪微博</string>
    <string name="login_sns_weixin">微信</string>
    <string name="login_tip_txt">请选择登录方式！</string>
    <string name="login_txt_username">用户名</string>
    <string name="login_txt_username_info">请输入用户名!(用于本设备登录使用)</string>
    <string name="main_msg_no_books">请先下载单词！</string>
    <string name="main_study_btn_challenge">挑战</string>
    <string name="main_study_btn_quickremember">快速记忆</string>
    <string name="main_study_btn_study">学习</string>
    <string name="main_study_btn_test">测验</string>
    <string name="main_study_txt_info_learned">已学习:</string>
    <string name="main_study_txt_info_tested">已测验:</string>
    <string name="main_study_txt_info_units">%d个单元</string>
    <string name="main_study_txt_info_words">%d个单词</string>
    <string name="main_study_txt_no_books">请选择要学习的词汇！</string>
    <string name="main_tab_title_home">学习</string>
    <string name="main_tab_title_list">一览</string>
    <string name="main_tab_title_report">报告</string>
    <string name="main_tab_title_review">复习</string>
    <string name="main_tab_title_social">社区</string>
    <string name="memo_author_self">我</string>
    <string name="memo_author_txt">作者</string>
    <string name="memo_compose_btn_save">保存</string>
    <string name="memo_compose_btn_save_share">分享</string>
    <string name="memo_msg_add_share_error">最多只能添加%d条分享笔记。</string>
    <string name="memo_msg_add_share_success">笔记添加成功。</string>
    <string name="memo_msg_no_share_memo">暂无分享笔记.</string>
    <string name="memo_msg_remove_memo_success">已删除笔记。</string>
    <string name="memo_msg_remove_share_success">已删除分享笔记。</string>
    <string name="memo_msg_save_success">保存笔记成功。</string>
    <string name="memo_msg_share_start">笔记分享中...</string>
    <string name="memo_msg_share_success">分享笔记成功。</string>
    <string name="memo_pri_memo_title">笔记</string>
    <string name="memo_pri_memo_txt">写笔记..</string>
    <string name="memo_pub_memo_title">分享笔记</string>
    <string name="msg_alert_exit">再按一次退出应用！</string>
    <string name="nav_title_advice">反馈建议</string>
    <string name="nav_title_books">词汇管理</string>
    <string name="nav_title_books_all">单词下载</string>
    <string name="nav_title_challenge">挑战选择</string>
    <string name="nav_title_home">单词树</string>
    <string name="nav_title_iap">应用内购买</string>
    <string name="nav_title_learn_unit">单元列表</string>
    <string name="nav_title_login">登录</string>
    <string name="nav_title_quick_learn_unit">快速记忆</string>
    <string name="nav_title_reclaim">单词纠错</string>
    <string name="nav_title_test">测验选择</string>
    <string name="nav_title_test_result">测试结果</string>
    <string name="nav_title_test_scope_all">全部单词</string>
    <string name="nav_title_test_scope_favorite">收藏单词</string>
    <string name="report_learn_title">学习状况</string>
    <string name="report_learn_txt">已学习单词数</string>
    <string name="report_mistake_title">单词错误次数状况</string>
    <string name="report_part_title">正确率(part别)</string>
    <string name="report_test_title">测验状况</string>
    <string name="report_test_txt_correct">正确率</string>
    <string name="report_test_txt_still">未测验</string>
    <string name="report_test_txt_wrong">不正确率</string>
    <string name="test_result_btn_mistake">"　再测一次
(仅错误单词)"</string>
    <string name="test_result_btn_next">下一问题</string>
    <string name="test_result_btn_retry">再测一次</string>
    <string name="test_result_comment_welldone">Great!Well done!</string>
    <string name="test_result_info">全:%1$d问 正确:%2$d问</string>
    <string name="test_result_rate_txt">正确率</string>
    <string name="wrang_times_10_over">10次以上</string>
    <string name="wrang_times_1_3">1~3次</string>
    <string name="wrang_times_1_only">仅1次</string>
    <string name="wrang_times_3_5">3~5次</string>
    <string name="wrang_times_5_10">5~10次</string>
</resources>