<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/color_white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:id="@id/scrollView1" android:layout_width="wrap_content" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="vertical" android:id="@id/learnPanel" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="18.0sp" android:textColor="@color/color_title" android:id="@id/tvTitleLearn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report_learn_title" />
                <TextView android:textSize="15.0sp" android:textColor="@color/color_text" android:id="@id/tvLearnCountText" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:text="@string/report_learn_txt" />
                <com.ou.android.customui.SimpleProgressView android:id="@id/progressView" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginTop="5.0dip" />
                <ImageView android:id="@id/imageView1" android:layout_marginTop="15.0dip" style="@style/gray_line" />
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/testPanel" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <TextView android:textSize="18.0sp" android:textColor="@color/color_title" android:id="@id/tvTitleTest" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report_test_title" />
                <com.ou.android.customui.CircleGraphView android:id="@id/testCircleView" android:layout_width="200.0dip" android:layout_height="200.0dip" android:layout_marginTop="10.0dip" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/testSubInfoPanel" android:background="@drawable/frame" android:layout_width="fill_parent" android:layout_height="29.0dip" android:layout_marginTop="10.0dip">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/testSubInfoRateLeft" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvTestRectCorrected" android:background="@drawable/report_tip_round_correct" android:layout_width="15.0dip" android:layout_height="15.0dip" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_text" android:id="@id/tvTestTxtCorrected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/report_test_txt_correct" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_graph_correct" android:id="@id/tvTestPercentCorrected" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/testSubInfoRateMid" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvTestRectWrang" android:background="@drawable/report_tip_round_wrong" android:layout_width="15.0dip" android:layout_height="15.0dip" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_text" android:id="@id/tvTestTxtWrang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/report_test_txt_wrong" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_graph_wrong" android:id="@id/tvTestPercentWrang" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/testSubInfoRateRight" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvTestRectStill" android:background="@drawable/report_tip_round_still" android:layout_width="15.0dip" android:layout_height="15.0dip" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_text" android:id="@id/tvTestTxtStill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/report_test_txt_still" />
                        <TextView android:textSize="10.0sp" android:textColor="@color/color_graph_still" android:id="@id/tvTestPercentStill" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/mistakePanel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
                <TextView android:textSize="18.0sp" android:textColor="@color/color_title" android:id="@id/tvTitleMistake" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report_mistake_title" />
                <com.ou.android.customui.CircleGraphView android:id="@id/mistakeCircleView" android:layout_width="200.0dip" android:layout_height="200.0dip" android:layout_marginTop="10.0dip" />
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/mistakeSubInfoPanel" android:background="@drawable/frame2" android:layout_width="fill_parent" android:layout_height="29.0dip" android:layout_marginTop="10.0dip">
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mistakeSubInfoRate_1_Only" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvMistakeRect_1_Only" android:background="@drawable/report_tip_round_1" android:layout_width="10.0dip" android:layout_height="10.0dip" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_text" android:id="@id/tvMistakeTxt_1_Only" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/wrang_times_1_only" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_graph_only1" android:id="@id/tvMistakePercent_1_Only" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mistakeSubInfoRate_1_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvMistakeRect_1_3" android:background="@drawable/report_tip_round_2" android:layout_width="10.0dip" android:layout_height="10.0dip" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_text" android:id="@id/tvMistakeTxt_1_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/wrang_times_1_3" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_graph_1_3" android:id="@id/tvMistakePercent_1_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mistakeSubInfoRate_3_5" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvMistakeRect_3_5" android:background="@drawable/report_tip_round_3" android:layout_width="10.0dip" android:layout_height="10.0dip" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_text" android:id="@id/tvMistakeTxt_3_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/wrang_times_3_5" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_graph_3_5" android:id="@id/tvMistakePercent_3_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mistakeSubInfoRate_5_10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvMistakeRect_5_10" android:background="@drawable/report_tip_round_4" android:layout_width="10.0dip" android:layout_height="10.0dip" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_text" android:id="@id/tvMistakeTxt_5_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/wrang_times_5_10" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_graph_5_10" android:id="@id/tvMistakePercent_5_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/mistakeSubInfoRate_10_Over" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                        <TextView android:id="@id/tvMistakeRect_10_Over" android:background="@drawable/report_tip_round_5" android:layout_width="10.0dip" android:layout_height="10.0dip" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_text" android:id="@id/tvMistakeTxt_10_Over" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/wrang_times_10_over" />
                        <TextView android:textSize="8.0sp" android:textColor="@color/color_graph_10_over" android:id="@id/tvMistakePercent_10_Over" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="10%" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:id="@id/categoryRadarPanel" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip">
                    <TextView android:textSize="18.0sp" android:textColor="@color/color_title" android:id="@id/tvTitleCategoryRadar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/report_part_title" />
                    <com.ou.android.customui.RandarCharView android:id="@id/categoryRadarCharView" android:layout_width="300.0dip" android:layout_height="300.0dip" android:layout_marginTop="10.0dip" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>