<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout android:fitsSystemWindows="true" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/contentLayout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <include android:id="@id/navBar" layout="@layout/nav_bar" />
        <RelativeLayout android:id="@id/contentBar" android:background="#aaeaeded" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@id/subHeaderLayout" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_margin="5.0dip" android:layout_centerHorizontal="true">
                <TextView android:textSize="16.0sp" android:textColor="@color/color_gray" android:id="@id/tvScoreTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="2.0dip" android:text="@string/test_result_rate_txt" />
            </RelativeLayout>
            <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/resultPanel" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="88.0dip" android:layout_below="@id/subHeaderLayout" android:layout_centerHorizontal="true">
                <LinearLayout android:gravity="center" android:id="@id/resultPanelsub" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:id="@id/imgResult" android:layout_width="38.0dip" android:layout_height="38.0dip" android:src="@drawable/quiz_result_good" />
                    <TextView android:textSize="28.0sp" android:textColor="@color/color_red" android:id="@id/tvScore" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="100%" />
                </LinearLayout>
                <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="18.0sp" android:textColor="@color/color_red" android:id="@id/tvComment" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_result_comment_welldone" android:layout_alignParentBottom="true" />
                    <TextView android:textSize="14.0sp" android:textColor="@color/color_gray" android:gravity="right" android:id="@id/tvCount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/test_result_info" android:layout_toRightOf="@id/tvComment" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/listLayout" android:paddingLeft="10.0dip" android:paddingTop="3.0dip" android:paddingRight="10.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <ImageView android:id="@id/imgSeperator2" android:layout_width="300.0dip" android:layout_height="1.0dip" android:src="@drawable/quiz_result_seperator" />
            <ListView android:id="@id/listView" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="3.0dip" style="@style/ListViewStyle" />
        </LinearLayout>
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/footerBar" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/imgSeperator" android:layout_width="300.0dip" android:layout_height="1.0dip" android:src="@drawable/quiz_result_seperator" />
            <RelativeLayout android:background="@color/color_test_footer_bg" android:paddingLeft="5.0dip" android:paddingTop="3.0dip" android:paddingRight="5.0dip" android:paddingBottom="3.0dip" android:layout_width="fill_parent" android:layout_height="44.0dip">
                <Button android:id="@id/btnRetry" android:layout_width="88.0dip" android:layout_height="36.0dip" android:text="@string/test_result_btn_retry" android:layout_alignParentLeft="true" style="@style/button_blue" />
                <Button android:id="@id/btnNext" android:layout_width="88.0dip" android:layout_height="36.0dip" android:text="@string/test_result_btn_next" android:layout_alignParentRight="true" style="@style/button_blue" />
                <Button android:textSize="13.0sp" android:id="@id/btnMistake" android:padding="0.0dip" android:layout_width="150.0dip" android:layout_height="36.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:text="@string/test_result_btn_mistake" android:layout_toLeftOf="@id/btnNext" android:layout_toRightOf="@id/btnRetry" android:layout_centerHorizontal="true" style="@style/button_blue" />
                <ImageView android:id="@id/imgAllRight" android:visibility="invisible" android:layout_width="150.0dip" android:layout_height="36.0dip" android:layout_marginLeft="3.0dip" android:layout_marginRight="3.0dip" android:src="@drawable/quiz_result_allright" android:layout_toLeftOf="@id/btnNext" android:layout_toRightOf="@id/btnRetry" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>